templates/jenkins-controller-ingress.yaml
---
# Source: jenkins/templates/jenkins-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-4.3.1"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-controller"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: jenkins
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: 'jenkins'
            port:
              number: 8080
        path: /
        pathType: Prefix
    host: "jenkins.udemy.thexbs.io"
  tls:
    - hosts:
      - jenkins.udemy.thexbs.io
      secretName: jenkins-io-key-pair-tls
